# complaint_management_system

./: .bandit  .env  .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_WITHOUT_DOCKER.md  Dockerfile  GITHUB_PIPELINE_SETUP.md  HOW_TO_CHECK_PIPELINE.md  Makefile  README.md  RELEASE_CHECKLIST.md  SECRETS_REFERENCE.md  SHOWCASE_README.md  app.py  check_pipeline.bat  check_pipeline.sh  complaints_export.csv  create_demo_data.py  docker-compose.yml  main_old.py  mypy.ini  pyproject.toml  pytest.ini  query_users.py  requirements.txt  run_tests.py  setup_database.py  setup_dev.py  setup_mysql_connection.py  setup_mysql_database.py  status_badges.md  test_connection.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd-docker.yml.backup  ci-cd-no-docker.yml  ci-cd.yml  ci.yml  code-quality.yml  dependency-update.yml  deploy.yml  manual-deploy.yml  performance.yml  security.yml  showcase.yml
config/: __init__.py  database.py
controllers/: __init__.py  controllers.py
dao/: base_dao.py  comment_dao.py  comment_dao_impl.py  complaint_dao.py  complaint_dao_impl.py  dao_factory.py  user_dao.py  user_dao_impl.py
deployment/: complaint-system.service  deploy.sh
docs/: CI_CD_PIPELINE.md
dto/: comment_dto.py  complaint_dto.py  user_dto.py
models/: __init__.py  comment.py  complaint.py  user.py
services/: comment_service.py  complaint_service.py  user_service.py
tests/: conftest.py  test_basic.py  test_controllers.py  test_simple.py  test_user_dto.py  test_user_service.py
tests/integration/: test_system_integration.py
views/: __init__.py  views.py
